mi_robot_manipulador_2/log/build_2023-04-23_22-39-19/mi_robot_manipulador_2/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/robotica/Taller3/mi_robot_manipulador_2/install/mi_robot_manipulador_2/lib/python3.10/site-packages/mi_robot_manipulador_2/robot_manipulator_teleop.py", line 1
    jQuiero que imprimas cada tecla que presiono por favor en este codigo
            ^^^
SyntaxError: invalid syntax

